# UnityVulkanTool

./: README.md
PluginSource/: CMakeLists.txt  build_android.sh  main.cpp
PluginSource/Unity/: IUnityGraphicsVulkan.h
UnityProject/Assets/: VulkanTest.cs  main.unity
UnityProject/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
